src/test/fail/inherit_self.lly
#[
SyntaxError: A class cannot inherit from itself!
Where: File "test/fail/inherit_self.lly" at line 6
]#

class abc() < abc {  }
